--- a/po/tr.po
+++ b/po/tr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: enigma2 teamBlue (Apachi70)\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-27 20:38+0200\n"
-"PO-Revision-Date: 2023-10-28 00:02+0200\n"
+"PO-Revision-Date: 2023-10-28 16:49+0200\n"
 "Last-Translator: Apachi70 (Openatv),(Teamblue) <teamblue@online.de,openatv@gmail.com>\n"
 "Language-Team: teamblue@t-online.de(apachi70)\n"
 "Language: tr_TR\n"
@@ -117,7 +117,7 @@ msgstr " ('%s') hata mesajlarıyla tamamlandı."
 
 #, python-format
 msgid " ('%s') finished with error number [%d]."
-msgstr " ('%s') [%d] hata numarasıyla tamamlandı."
+msgstr " ('%s') hata numarasıyla tamamlandı [%d]."
 
 msgid " (+5 volt terrestrial)"
 msgstr " (+5 volt karasal)"
@@ -131,7 +131,7 @@ msgstr " (Kanal %s)"
 
 #, python-format
 msgid " (Partition %d)"
-msgstr " (%d bölümü)"
+msgstr " (Bölüm %d)"
 
 msgid " (PiP)"
 msgstr " (PiP)"
@@ -454,7 +454,7 @@ msgid "'%s' not installed and no known package"
 msgstr "'%s' kurulu değil ve bilinen paket yok"
 
 msgid "'Minimum send interval' needs to be enabled to use this option."
-msgstr ""
+msgstr "Bu seçeneği kullanmak için 'Minimum gönderme aralığı'nın etkinleştirilmesi gerekir."
 
 #, python-format
 msgid "(%d jobs)"
@@ -467,7 +467,7 @@ msgid "(Selectmode)"
 msgstr "(Mod seç)"
 
 msgid "(The file '/media/hdd/images/config/myrestore.sh' exists and will be run after the image is flashed.)"
-msgstr ""
+msgstr "('/media/hdd/images/config/myrestore.sh' dosyası mevcut ve görüntü flashlandıktan sonra çalıştırılacak.)"
 
 msgid "(ZAP as PiP)"
 msgstr "(ZAP PiP olarak)"
@@ -1164,13 +1164,13 @@ msgid "Arabic"
 msgstr "Arapça"
 
 msgid "Are you sure to delete image:"
-msgstr "Image silmek istediğinizden emin misiniz?"
+msgstr "Image silmek istediğinizden emin misiniz:"
 
 msgid "Are you sure to purge all deleted user bouquets?"
 msgstr "Silinen tüm kullanıcı buketlerini temizlediğinizden emin misiniz?"
 
 msgid "Are you sure to reboot to"
-msgstr "Yeniden başlattığınızdan emin misiniz?"
+msgstr "Yeniden başlattığınızdan emin misiniz"
 
 #. TRANSLATORS: The user is asked to delete all satellite services from a specific orbital position after a configuration change
 #, python-format
@@ -1187,7 +1187,7 @@ msgid "Are you sure to remove this entry?"
 msgstr "Bu girişi kaldırmak istediğinize emin misiniz?"
 
 msgid "Are you sure to restore all deleted images"
-msgstr "Silinen tüm görüntüleri geri yüklediğinizden emin misiniz?"
+msgstr "Silinen tüm görüntüleri geri yüklediğinizden emin misiniz"
 
 msgid ""
 "Are you sure you want to activate this network configuration?\n"
@@ -1927,7 +1927,7 @@ msgstr ""
 
 #, python-format
 msgid "Cannot format partition %d"
-msgstr "%d bölümü biçimlendirilemiyor"
+msgstr "Bölüm biçimlendirilemiyor %d"
 
 msgid ""
 "Cannot mount new drive.\n"
@@ -3405,14 +3405,14 @@ msgstr "Klasör"
 
 #, python-format
 msgid "Directory %s does not exist."
-msgstr "%s klasörü yok."
+msgstr "Dizin (%s) mevcut değil."
 
 msgid "Directory browser"
 msgstr "Klasör gezgini"
 
 #, python-format
 msgid "Directory contains %(file)s and %(subdir)s."
-msgstr "%(file)s ve %(subdir)s dizin içermektedir."
+msgstr "Dizin %(file)s ve %(subdir)s içerir."
 
 msgid "Disable"
 msgstr "Pasif"
@@ -3527,11 +3527,11 @@ msgstr ""
 
 #, python-format
 msgid "Do you really want to delete %s?"
-msgstr "%s 'i silmek istediğinize emin misiniz?"
+msgstr "Gerçekten %s'ı silmek istiyor musunuz?"
 
 #, python-format
 msgid "Do you really want to download the plugin \"%s\"?"
-msgstr "\"%s\" eklentisini indirmek istiyor musunuz?"
+msgstr "Gerçekten \"%s\" eklentisini indirmek istiyor musunuz?"
 
 msgid "Do you really want to exit?"
 msgstr "Çıkmak istediğinize emin misiniz?"
@@ -3549,15 +3549,15 @@ msgstr ""
 
 #, python-format
 msgid "Do you really want to remove directory %s from the disk?"
-msgstr "%s klasörünü silmek istiyor musunuz?"
+msgstr "Dizini gerçekten diskten kaldırmak istiyor %s musunuz?"
 
 #, python-format
 msgid "Do you really want to remove the plugin \"%s\"?"
-msgstr "\"%s\"eklentisini silmek istiyor musunuz?"
+msgstr "Eklentiyi gerçekten kaldırmak istiyor musunuz \"%s\"?"
 
 #, python-format
 msgid "Do you really want to remove your bookmark of %s?"
-msgstr "%s isimli yer imini silmek istiyor musunuz?"
+msgstr "Gerçekten yer iminizi kaldırmak istiyor musunuz %s?"
 
 #, python-format
 msgid "Do you really want to stop current event and delete timer %s?"
@@ -3565,7 +3565,7 @@ msgstr "Şu anki etkinliği durdurmak ve%s zamanlayıcısını silmek istiyor mu
 
 #, python-format
 msgid "Do you really want to unhold the plugin \"%s\"?"
-msgstr "\"%s\" eklentisini gerçekten tutmak istiyor musunuz?"
+msgstr "Gerçekten eklentiyi kaldırmak istiyor musunuz \"%s\"?"
 
 msgid "Do you want change rights?\n"
 msgstr "Hakları değiştirmek istiyor musunuz?\n"
@@ -3714,6 +3714,8 @@ msgid ""
 "Download Successful\n"
 "%s"
 msgstr ""
+"İndir Başarılı\n"
+"%s"
 
 msgid "Download plugins"
 msgstr "Eklentileri indir"
@@ -3914,10 +3916,10 @@ msgid "Enable"
 msgstr "Etkinleştir"
 
 msgid "Enable 'neutrino' style channel select controlling"
-msgstr "'neutrino' tarzı kanal kontrol seçimini etkinleştir"
+msgstr "'Neutrino' tarzı kanal seçimi kontrolünü etkinleştirin"
 
 msgid "Enable 'neutrino' style zap controlling"
-msgstr "'neutrino' tarzı kanal değişimini etkinleştir"
+msgstr "'Neutrino' tarzı zap kontrolünü etkinleştirin"
 
 msgid "Enable 5V for active antenna"
 msgstr "Aktif anten için 5V etkinleştir"
@@ -4014,7 +4016,7 @@ msgid "Enable remote enigma2 receiver to be tried to tune into services that can
 msgstr "Yerel enigma2 alıcısının yerel olarak ayarlanamayan servislere ayarlanmaya çalışılmasını sağlar (örn. Radyo alıcısı veya servis türü yerel alıcıda kullanılamaz. Http: // ve port numarası dahil olmak üzere tam URL'yi belirtin (normal ...: 8001 ), örneğin http: // second_box: 8001."
 
 msgid "Enable screenshot of LCD in /tmp"
-msgstr "/ tmp LCD ekran etkinleştirme"
+msgstr "LCD'nin /tmp içindeki ekran görüntüsünü etkinleştirin"
 
 msgid "Enable teletext caching"
 msgstr "Teleteks önbelleğini etkinleştir"
@@ -4214,7 +4216,8 @@ msgid ""
 "Error linking %s to %s:\n"
 "%s"
 msgstr ""
-"%s %s öğesine bağlanırken hata oluştu:\n"
+"Şuraya bağlanırken %s hata oluştu %s:\n"
+"\n"
 "%s"
 
 msgid "Error reading bouquets.radio"
@@ -4228,7 +4231,7 @@ msgid ""
 "Error renaming %s to %s:\n"
 "%s"
 msgstr ""
-"%s ile %s olarak yeniden adlandırma hatası:\n"
+"Şu şekilde yeniden adlandırma %s hatası %s:\n"
 "%s"
 
 msgid "Error when writing epg.dat on server"
@@ -4773,7 +4776,7 @@ msgstr "Flaş Image"
 
 #, python-format
 msgid "Flash your %s %s and reboot now?"
-msgstr "inizi flaşlayın ve %s %s şimdi yeniden başlatın?"
+msgstr "Inizi flaşlayın ve %s %s şimdi yeniden başlatın?"
 
 msgid "Flash, restore settings and user selected plugins"
 msgstr "Flash, geri yükleme ayarları ve kullanıcı tarafından seçilen eklentiler"
@@ -4830,11 +4833,11 @@ msgstr "Disk biçimlendiriliyor"
 
 #, python-format
 msgid "Formatting disk %s"
-msgstr "%s disk biçimlendiriliyor"
+msgstr "Disk biçimlendiriliyor %s"
 
 #, python-format
 msgid "Formatting partition %d"
-msgstr "%d bölüm biçimlendiriliyor"
+msgstr "Bölüm biçimlendiriliyor %d"
 
 msgid "Forward volume keys"
 msgstr "Ses tuşları ileri"
@@ -6315,10 +6318,10 @@ msgid "Make it possible to manually initiate the channels import and/or EPG via 
 msgstr "Eklenti menüsü aracılığıyla kanalları içe aktarma ve / veya EPG'yi manuel olarak başlatmayı mümkün kılın"
 
 msgid "Make this mark an 'in' point"
-msgstr "'içinde' noktası olarak işaretle"
+msgstr "Bu işareti bir 'giriş' noktası yapın"
 
 msgid "Make this mark an 'out' point"
-msgstr "'disinda' noktası olarak işaretle"
+msgstr "Bu işareti bir 'çıkış' noktası yapın"
 
 msgid "Make this mark just a mark"
 msgstr "Bu işareti sadece bir işaret olarak kullan"
@@ -6549,9 +6552,8 @@ msgstr "Moğolistan"
 msgid "Montenegro"
 msgstr "Karadağ"
 
-#, fuzzy
 msgid "Monthly"
-msgstr "ay"
+msgstr "Aylık"
 
 msgid "Montserrat"
 msgstr "Montserrat"
@@ -6708,7 +6710,7 @@ msgid "Move west"
 msgstr "Batıya taşı"
 
 msgid "Moved to position 0"
-msgstr "'0' pozisyonuna taşı"
+msgstr "Konum 0'a taşındı"
 
 msgid "Moved to position at index"
 msgstr "Dizinindeki konuma taşınır"
@@ -8507,7 +8509,7 @@ msgstr "Kaldırmaya hazır mısınız \"%s\" ?"
 
 #, python-format
 msgid "Ready to remove %s ?"
-msgstr "%s kaldırmak için hazır mısınız?"
+msgstr "Kaldırmaya hazır mısınız \"%s\" ?"
 
 msgid "Really WOL now?"
 msgstr "Gerçekten iyi şimdi?"
@@ -8542,7 +8544,7 @@ msgstr "Şimdi kapatmak istiyor musunuz?"
 
 #, python-format
 msgid "Really shutdown your %s %s now?"
-msgstr "%s %s simdi kapatmak istiyor musunuz?"
+msgstr "Gerçekten %s %s'inizi şimdi mi kapatıyorsunuz?"
 
 #, python-format
 msgid "Really store at index %2d for current position?"
@@ -8578,7 +8580,7 @@ msgstr "Kayıt"
 
 #, python-format
 msgid "Record time limited due to conflicting timer %s"
-msgstr "%s zamanlayıcısı ile çakışmadan dolayı kayıt süresi sınırlandırılmış"
+msgstr "Çakışan zamanlayıcı nedeniyle kayıt süresi sınırlı %s"
 
 msgid "Recordable media toolbox"
 msgstr "Kaydedilebilir medya araç kutusu"
@@ -8793,7 +8795,7 @@ msgstr "Kanal Kaldırılıyor"
 
 #, python-format
 msgid "Removing directory %s failed. (Maybe not empty.)"
-msgstr "%s klasörü silinemedi. (Klasör boş olmayabilir.)"
+msgstr "Dizin %s kaldırılamadı. (Belki boş değildir.)"
 
 msgid "Removing partition table"
 msgstr "Bölümleme tablosu kaldırılıyor"
@@ -8881,7 +8883,7 @@ msgstr "Yeniden başlat"
 
 #, python-format
 msgid "Restart %s %s"
-msgstr "%s %s yeniden başlat"
+msgstr "Yeniden Başlat %s %s"
 
 msgid "Restart GUI now?"
 msgstr "Grafiksel arayüzü yeniden başlatmak istiyor musunuz?"
@@ -9287,12 +9289,12 @@ msgstr "Tara "
 #. TRANSLATORS: option name, indicating which type of (DVB-C) modulation should be scanned. The modulation type is printed in '%s'. E.g.: 'Scan QAM16'
 #, python-format
 msgid "Scan %s"
-msgstr "%s Tara"
+msgstr "Tara %s"
 
 #. TRANSLATORS: option name, indicating which type of (DVB-C) band should be scanned. The name of the band is printed in '%s'. E.g.: 'Scan EU MID band'
 #, python-format
 msgid "Scan %s band"
-msgstr "%s bant Tarama"
+msgstr "Tarama %s bandı"
 
 msgid "Scan IP"
 msgstr "IP tara"
@@ -9528,7 +9530,7 @@ msgstr "Eylem seç"
 
 #, python-format
 msgid "Select action for timer '%s'."
-msgstr "'%s'zamanı için eylem seç."
+msgstr "Zamanlayıcı için eylemi seçin '%s'."
 
 msgid "Select all"
 msgstr "Tümünü seç"
@@ -11072,7 +11074,7 @@ msgid "Succeeded:"
 msgstr "Başarılı:"
 
 msgid "Successfully restored /etc/inetd.conf!"
-msgstr "/etc/inetd.conf başarıyla onarıldı!"
+msgstr "Başarıyla /etc/inetd.conf geri yüklendi!"
 
 msgid "Sudan"
 msgstr "Sudan"
@@ -11223,7 +11225,7 @@ msgid "Symbolic link"
 msgstr "Sembolik bağlantı"
 
 msgid "Symlink to "
-msgstr "İçin bağlantı "
+msgstr "Symlink'e "
 
 msgid "Sync failure moving back to origin !"
 msgstr "Senkronizasyon hatası geriye orjine hareket  !"
@@ -11444,8 +11446,8 @@ msgid ""
 "The directory %s is not writable.\n"
 "Make sure you select a writable directory instead."
 msgstr ""
-"%s klasörüne yazma hakki yok.\n"
-"Seçtiğiniz klasörün yazılabilir olduğuna emin olunuz."
+"Dizin yazılabilir %s  değil.\n"
+"Bunun yerine yazılabilir bir dizin seçtiğinizden emin olun."
 
 msgid "The following files were found..."
 msgstr "Aşağıdaki dosyalar bulundu..."
@@ -11524,7 +11526,7 @@ msgstr "Parola boş olamaz."
 
 #, python-format
 msgid "The path %s already exists."
-msgstr "%s yolu zaten var."
+msgstr "Yol %s zaten mevcut."
 
 msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
 msgstr "Yalnızca streamrelay aracılığıyla şifrelenebilen hizmetlerin şifresini çözmek için kullanılan streamrelay sunucusunun bağlantı noktası"
@@ -11563,7 +11565,7 @@ msgstr "Alıcının kullanıcı arayüzü, seçilen arayüzü seçmek için yeni
 
 #, python-format
 msgid "The user interface of your %s %s is restarting"
-msgstr "%s %s kullanıcı arayüzü yeniden başlatılıyor"
+msgstr "Cihazınızın kullanıcı arayüzü %s %s yeniden başlatılıyor"
 
 msgid "The width of the picture. The input will be scaled to match this value."
 msgstr "Resmin genişliği. Girdi, bu değere uyacak şekilde ölçeklendirilecektir."
@@ -12389,11 +12391,11 @@ msgstr "Bilinmeyen"
 
 #, python-format
 msgid "Unknown group: %d"
-msgstr "Bilinmeyen grup:%d"
+msgstr "Bilinmeyen grup: %d"
 
 #, python-format
 msgid "Unknown user: %d"
-msgstr "Bilinmeyen kullanıcı:%d"
+msgstr "Bilinmeyen kullanıcı: %d"
 
 msgid "Unmark service as dedicated 3D service"
 msgstr "Hizmet adanmış 3D hizmeti olarak işaretini kaldırın"
@@ -12674,11 +12676,11 @@ msgstr "Venezuela (Bolivar Cumhuriyeti)"
 
 #, python-format
 msgid "Version %s %s"
-msgstr "Sürüm %s%s"
+msgstr "Sürüm %s %s"
 
 #, python-format
 msgid "Version: %s"
-msgstr "Sürüm:%s"
+msgstr "Sürüm: %s"
 
 msgid "Vertical"
 msgstr "Düşey (V)"
@@ -13561,7 +13563,7 @@ msgstr "En az bir Komut ayarlamanız gerekir"
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
-msgstr "%s hizmetine geçmelisiniz (%s - '%s')!\n"
+msgstr "Servise geçmelisiniz %s (%s - '%s')!\n"
 
 msgid ""
 "You need a PC connected to your %s %s. If you need further instructions, please visit the website https://www.opena.tv.\n"
@@ -13577,23 +13579,23 @@ msgid "You seem to be in timeshift!"
 msgstr "Zaman kayması içindesin!"
 
 msgid "Your %s %s does not have an internet connection"
-msgstr "%s %s internet bağlantısı yok"
+msgstr "Internet bağlantısı %s%s  yok"
 
 #, python-format
 msgid "Your %s %s goes to WOL"
-msgstr "%s %s yeniden başlatılıyor"
+msgstr "Sizin %s %s WOL'a gider"
 
 #, python-format
 msgid "Your %s %s is not connected to the internet, please check your network settings and try again."
-msgstr "%s%s bağlantınız internete bağlı değil, lütfen ağ ayarlarınızı kontrol edip tekrar deneyin."
+msgstr "İnternete %s %s bağlı değilsiniz, lütfen ağ ayarlarınızı kontrol edip tekrar deneyin."
 
 #, python-format
 msgid "Your %s %s is rebooting"
-msgstr "%s %s yeniden başlatılıyor"
+msgstr "Yeniden %s %s başlatılıyor"
 
 #, python-format
 msgid "Your %s %s is shutting down"
-msgstr "%s %s kapatılıyor"
+msgstr "Kapanıyor %s %s . Lütfen bekle"
 
 msgid "Your %s %s is shutting down. Please wait..."
 msgstr "Kapanıyor %s %s . Lütfen bekle..."
@@ -13619,8 +13621,8 @@ msgid ""
 "Your %s %s will be restarted after the installation of service.\n"
 "Ready to install %s ?"
 msgstr ""
-"%s %s  hizmet yüklendikten sonra yeniden başlatılır.\n"
-"%s yüklemek için hazır mısınız?"
+"Hizmetin %s %s kurulumundan sonra yeniden başlatılacaksınız\n"
+"Yüklemeye hazır %s ?"
 
 #, python-format
 msgid ""
@@ -13635,7 +13637,7 @@ msgid ""
 "Your %s %s will be restarted after the removal of service.\n"
 "Do you want to remove now ?"
 msgstr ""
-"%s %s  hizmet kaldırıldıktan sonra yeniden başlatılır.\n"
+"Hizmetin %s %s kaldırılmasından sonra yeniden başlatılacaksınız\n"
 "Şimdi kaldırmak istiyor musunuz?"
 
 msgid "Your PIN code is 0000. This is the default PIN code and it disables parental control!\n"
@@ -13788,10 +13790,10 @@ msgid "Zap focus to main screen"
 msgstr "Ana ekranda kanal değiştir"
 
 msgid "Zap mode"
-msgstr "Kanal değişim modu"
+msgstr "Zap modu"
 
 msgid "Zap to"
-msgstr "Için Zap"
+msgstr "Zap için"
 
 msgid "Zap to selected channel"
 msgstr "Seçilen kanalı aç"
